重学 pandas.DataFrame 的创建和简单用法

--- a/TestX/t241118_loc_iloc.ipynb
+++ b/TestX/t241118_loc_iloc.ipynb
@@ -2,102 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A  B  C\n",
-       "a  1  4  7\n",
-       "b  2  5  8\n",
-       "c  3  6  9"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   A  B  C\n",
+      "a  1  4  7\n",
+      "b  2  5  8\n",
+      "c  3  6  9\n"
+     ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "pandas.DataFrame example\n",
+    "\n",
+    "确定创建该格式的一个具体方法\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "\n",
     "data = {'A':[1,2,3], 'B':[4,5,6], 'C':[7,8,9]}\n",
     "\n",
     "df = pd.DataFrame(data, index=['a', 'b', 'c'])\n",
-    "df"
+    "\n",
+    "# Print the DataFrame\n",
+    "#df, or print(df) will both work\n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   A  B  C\n",
+      "a  1  4  7\n",
+      "b  2  5  8\n",
+      "c  3  6  9\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 打印其中一个元素的方法\n",
+    "print(df)\n",
     "df.loc['a',\"A\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,18 +108,19 @@
        "a  1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 打印其中一个子矩阵列表的方法\n",
     "df.loc[['a'],['A']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +172,8 @@
     }
    ],
    "source": [
+    "# 打印其中一个子矩阵列表的方法\n",
+    "# 这里是两行一列\n",
     "df.loc[['b','c'], ['C']]"
    ]
   },
@@ -293,6 +266,13 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- .iloc与.loc比较，可以按照序号抓取元素或者子矩阵"
    ]
   },
   {
@@ -484,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
