--- a/TestX/t241118_pandas.ipynb
+++ b/TestX/t241118_pandas.ipynb
@@ -1,19 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pandas可以直接读取 excel 数据，并返回一个 DataFrame 对象"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel('https://www.gairuo.com/file/data/dataset/team.xlsx')"
+    "# Read the Excel file from the URL\n",
+    "df = pd.read_excel('https://www.gairuo.com/file/data/dataset/team.xlsx')\n",
+    "# Alternatively, you can read from a local file\n",
+    "#df = pd.read_excel('./t241118_pandas-team.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +183,27 @@
     }
    ],
    "source": [
-    "df\n"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df)"
    ]
   },
   {
@@ -1594,7 +1624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
