--- a/TestX/t241118_pandas_2.ipynb
+++ b/TestX/t241118_pandas_2.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pandas.Series是Pandas处理一维数据的工具；\n",
+    "也可以以之为基础，创建 dataFrame 数据"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +31,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
